--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     },
     "author": "Osmel",
     "license": "MIT",
+    "dependencies": {
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "mongoose": "^7.6.0"
+    },
     "devDependencies": {
         "eslint": "8.40.0",
         "eslint-config-prettier": "8.8.0",
@@ -26,7 +31,11 @@
         "prettier": "2.8.8"
     },
     "imports": {
-        "#Lib/*": "./src/lib/*"
+        "#Config/*": "./src/config/*",
+        "#Controllers/*": "./src/controllers/*",
+        "#Dto/*": "./src/dto/*",
+        "#Routes/*": "./src/routes/*",
+        "#Schemas/*": "./src/schemas/*"
     },
     "lint-staged": {
         "*.js": "eslint --fix",
