--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "author": "Osmel",
     "license": "MIT",
     "dependencies": {
+        "@sinclair/typebox": "^0.31.17",
+        "ajv": "^8.12.0",
+        "ajv-errors": "^3.0.0",
+        "ajv-formats": "^2.1.1",
+        "bcrypt": "^5.1.1",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "jose": "^4.15.2",
         "mongoose": "^7.6.0"
     },
     "devDependencies": {
@@ -35,7 +41,8 @@
         "#Controllers/*": "./src/controllers/*",
         "#Dto/*": "./src/dto/*",
         "#Routes/*": "./src/routes/*",
-        "#Schemas/*": "./src/schemas/*"
+        "#Schemas/*": "./src/schemas/*",
+        "#Lib/*": "./src/lib/*"
     },
     "lint-staged": {
         "*.js": "eslint --fix",
