--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "imports": {
         "#Config/*": "./src/config/*",
         "#Controllers/*": "./src/controllers/*",
+        "#Constants/*": "./src/constants/*",
         "#Dto/*": "./src/dto/*",
         "#Routes/*": "./src/routes/*",
-        "#Schemas/*": "./src/schemas/*",
-        "#Lib/*": "./src/lib/*"
+        "#Schemas/*": "./src/schemas/*"
     },
     "lint-staged": {
         "*.js": "eslint --fix",
